# fract

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  PKGBUILD  README.md  configure.ac  meson.build  meson.options
m4/: ax_check_sed.m4
res/: Makefile.am  abt-dlg.ui  fract.desktop  fract.desktop.in  fract.gresources.xml  life-dlg.ui  meson.build  query-dlg.ui  win.rc
src/: FractApp.cpp  FractApp.h  FractView.cpp  FractView.h  FractWin.cpp  FractWin.h  LifeDialog.cpp  LifeDialog.hpp  LifeGrid.cpp  LifeGrid.hpp  LifeParser.cpp  LifeParser.hpp  LifeQueryDialog.cpp  LifeQueryDialog.hpp  Makefile.am  Param.cpp  Param.h  ParamDlg.cpp  ParamDlg.h  Worker.cpp  Worker.h  meson.build
test/: fract_test.cpp  meson.build
