
life_src = files(
	  'LifeGrid.cpp'
	, 'LifeParser.cpp')
life_lib = static_library('life_lib.a'
						 , life_src
						 , dependencies : deps)

sources = files(
      'FractApp.cpp'
	, 'FractWin.cpp'
	, 'FractView.cpp'
	, 'Param.cpp'
	, 'ParamDlg.cpp'
	, 'Worker.cpp'
	, 'LifeDialog.cpp'
	, 'LifeQueryDialog.cpp'
    )

